my_lex_yacc_example/yacc.output
Nonterminals useless in grammar

   opt_literal_list
   drop_statement
   execute_statement
   export_statement
   file_path
   file_type
   from_clause
   hint
   import_statement
   join_clause
   join_condition
   nonjoin_table_ref_atomic
   opt_all
   opt_exists
   opt_file_type
   opt_from_clause
   opt_group
   opt_having
   opt_join_type
   opt_limit
   opt_order_type
   opt_table_alias
   opt_top
   order_desc
   prepare_statement
   prepare_target_query
   select_clause
   select_no_paren
   select_statement
   select_with_paren
   select_within_set_operation
   select_within_set_operation_no_parentheses
   set_operator
   set_type
   show_statement
   statement
   statement_list
   table_alias
   table_ref
   table_ref_atomic
   table_ref_name
   transaction_statement
   with_description


Terminals unused in grammar

   DEALLOCATE
   PARAMETERS
   INTERSECT
   TEMPORARY
   TIMESTAMP
   NVARCHAR
   RESTRICT
   ANALYZE
   CASCADE
   COLUMNS
   CONTROL
   DEFAULT
   EXECUTE
   EXPLAIN
   NATURAL
   PREPARE
   PRIMARY
   SCHEMAS
   SPATIAL
   VIRTUAL
   DESCRIBE
   BEFORE
   COLUMN
   DIRECT
   DOUBLE
   ESCAPE
   EXCEPT
   FORMAT
   GLOBAL
   HAVING
   IMPORT
   OFFSET
   RENAME
   SCHEMA
   SELECT
   SORTED
   TABLES
   UNIQUE
   UNLOAD
   AFTER
   ALTER
   CROSS
   DELTA
   FLOAT
   GROUP
   INDEX
   INNER
   LIMIT
   LOCAL
   MERGE
   MINUS
   ORDER
   OUTER
   RIGHT
   UNION
   USING
   CALL
   CHAR
   COPY
   DATE
   DATETIME
   DESC
   DROP
   FILE
   FULL
   HASH
   HINT
   JOIN
   LEFT
   LOAD
   LONG
   PLAN
   SHOW
   TEXT
   TIME
   VIEW
   WITH
   ADD
   ALL
   ASC
   FOR
   INT
   KEY
   OFF
   TOP
   BY
   OF
   ON
   TO
   TRANSACTION
   BEGIN
   COMMIT
   ROLLBACK
   LESS
   GREATER
   NOTNULL
   UMINUS


语法中的规则无效

  127 opt_literal_list: literal_list
  128                 | %empty


由于冲突，解析器中的规则不起作用

  126 table_name: IDENTIFIER


状态 12conflicts: 4 reduce/reduce


语法

    0 $accept: preparable_statement $end

    1 preparable_statement: delete_statement
    2                     | truncate_statement
    3                     | insert_statement
    4                     | create_statement
    5                     | update_statement

    6 delete_statement: DELETE FROM table_name

    7 truncate_statement: TRUNCATE table_name

    8 insert_statement: INSERT INTO table_name opt_column_list VALUES '(' literal_list ')'

    9 create_statement: CREATE TABLE opt_not_exists table_name '(' column_def_commalist ')'

   10 update_statement: UPDATE table_ref_name_no_alias SET update_clause_commalist opt_where

   11 update_clause_commalist: update_clause
   12                        | update_clause_commalist ',' update_clause

   13 update_clause: IDENTIFIER '=' expr

   14 opt_where: WHERE expr
   15          | %empty

   16 table_ref_name_no_alias: table_name

   17 table_name: IDENTIFIER
   18           | IDENTIFIER '.' IDENTIFIER

   19 expr_list: expr_alias
   20          | expr_list ',' expr_alias

   21 expr_alias: expr opt_alias

   22 opt_alias: alias
   23          | %empty

   24 alias: AS IDENTIFIER
   25      | IDENTIFIER

   26 expr: operand
   27     | between_expr
   28     | logic_expr
   29     | exists_expr
   30     | in_expr

   31 operand: '(' expr ')'
   32        | array_index
   33        | scalar_expr
   34        | unary_expr
   35        | binary_expr
   36        | case_expr
   37        | function_expr
   38        | extract_expr
   39        | cast_expr
   40        | array_expr

   41 scalar_expr: column_name
   42            | literal

   43 unary_expr: '-' operand
   44           | NOT operand
   45           | operand ISNULL
   46           | operand IS NULL
   47           | operand IS NOT NULL

   48 binary_expr: comp_expr
   49            | operand '-' operand
   50            | operand '+' operand
   51            | operand '/' operand
   52            | operand '*' operand
   53            | operand '%' operand
   54            | operand '^' operand
   55            | operand LIKE operand
   56            | operand NOT LIKE operand
   57            | operand ILIKE operand
   58            | operand CONCAT operand

   59 logic_expr: expr AND expr
   60           | expr OR expr

   61 in_expr: operand IN '(' expr_list ')'
   62        | operand NOT IN '(' expr_list ')'

   63 case_list: WHEN expr THEN expr
   64          | case_list WHEN expr THEN expr

   65 case_expr: CASE expr case_list END
   66          | CASE expr case_list ELSE expr END
   67          | CASE case_list END
   68          | CASE case_list ELSE expr END

   69 exists_expr: EXISTS
   70            | NOT EXISTS

   71 comp_expr: operand '=' operand
   72          | operand EQUALS operand
   73          | operand NOTEQUALS operand
   74          | operand '<' operand
   75          | operand '>' operand
   76          | operand LESSEQ operand
   77          | operand GREATEREQ operand

   78 function_expr: IDENTIFIER '(' ')'
   79              | IDENTIFIER '(' opt_distinct expr_list ')'

   80 opt_distinct: DISTINCT
   81             | %empty

   82 extract_expr: EXTRACT '(' datetime_field FROM expr ')'

   83 cast_expr: CAST '(' expr AS column_type ')'

   84 datetime_field: SECOND
   85               | MINUTE
   86               | HOUR
   87               | DAY
   88               | MONTH
   89               | YEAR

   90 array_expr: ARRAY '[' expr_list ']'

   91 array_index: operand '[' int_literal ']'

   92 between_expr: operand BETWEEN operand AND operand

   93 column_name: IDENTIFIER
   94            | IDENTIFIER '.' IDENTIFIER
   95            | '*'
   96            | IDENTIFIER '.' '*'

   97 literal: string_literal
   98        | bool_literal
   99        | num_literal
  100        | null_literal
  101        | param_expr

  102 opt_not_exists: IF NOT EXISTS
  103               | %empty

  104 column_def_commalist: column_def
  105                     | column_def_commalist ',' column_def

  106 column_def: IDENTIFIER column_type opt_column_nullable

  107 column_type: VARCHAR
  108            | INTEGER

  109 opt_column_nullable: NULL
  110                    | NOT NULL
  111                    | %empty

  112 opt_column_list: '(' ident_commalist ')'
  113                | %empty

  114 ident_commalist: IDENTIFIER
  115                | ident_commalist ',' IDENTIFIER

  116 literal_list: literal
  117             | literal_list ',' literal

  118 string_literal: STRING

  119 bool_literal: TRUE
  120             | FALSE

  121 num_literal: FLOATVAL
  122            | int_literal

  123 int_literal: INTVAL

  124 null_literal: NULL

  125 param_expr: '?'

  126 table_name: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'%' (37) 53
'(' (40) 8 9 31 61 62 78 79 82 83 112
')' (41) 8 9 31 61 62 78 79 82 83 112
'*' (42) 52 95 96
'+' (43) 50
',' (44) 12 20 105 115 117
'-' (45) 43 49
'.' (46) 18 94 96
'/' (47) 51
'<' (60) 74
'=' (61) 13 71
'>' (62) 75
'?' (63) 125
'[' (91) 90 91
']' (93) 90 91
'^' (94) 54
error (256)
IDENTIFIER (258) 13 17 18 24 25 78 79 93 94 96 106 114 115 126
STRING (259) 118
FLOATVAL (260) 121
INTVAL (261) 123
DEALLOCATE (262)
PARAMETERS (263)
INTERSECT (264)
TEMPORARY (265)
TIMESTAMP (266)
DISTINCT (267) 80
NVARCHAR (268)
RESTRICT (269)
TRUNCATE (270) 7
ANALYZE (271)
BETWEEN (272) 92
CASCADE (273)
COLUMNS (274)
CONTROL (275)
DEFAULT (276)
EXECUTE (277)
EXPLAIN (278)
INTEGER (279) 108
NATURAL (280)
PREPARE (281)
PRIMARY (282)
SCHEMAS (283)
SPATIAL (284)
VARCHAR (285) 107
VIRTUAL (286)
DESCRIBE (287)
BEFORE (288)
COLUMN (289)
CREATE (290) 9
DELETE (291) 6
DIRECT (292)
DOUBLE (293)
ESCAPE (294)
EXCEPT (295)
EXISTS (296) 69 70 102
EXTRACT (297) 82
CAST (298) 83
FORMAT (299)
GLOBAL (300)
HAVING (301)
IMPORT (302)
INSERT (303) 8
ISNULL (304) 45
OFFSET (305)
RENAME (306)
SCHEMA (307)
SELECT (308)
SORTED (309)
TABLES (310)
UNIQUE (311)
UNLOAD (312)
UPDATE (313) 10
VALUES (314) 8
AFTER (315)
ALTER (316)
CROSS (317)
DELTA (318)
FLOAT (319)
GROUP (320)
INDEX (321)
INNER (322)
LIMIT (323)
LOCAL (324)
MERGE (325)
MINUS (326)
ORDER (327)
OUTER (328)
RIGHT (329)
TABLE (330) 9
UNION (331)
USING (332)
WHERE (333) 14
CALL (334)
CASE (335) 65 66 67 68
CHAR (336)
COPY (337)
DATE (338)
DATETIME (339)
DESC (340)
DROP (341)
ELSE (342) 66 68
FILE (343)
FROM (344) 6 82
FULL (345)
HASH (346)
HINT (347)
INTO (348) 8
JOIN (349)
LEFT (350)
LIKE (351) 55 56
LOAD (352)
LONG (353)
NULL (354) 46 47 109 110 124
PLAN (355)
SHOW (356)
TEXT (357)
THEN (358) 63 64
TIME (359)
VIEW (360)
WHEN (361) 63 64
WITH (362)
ADD (363)
ALL (364)
AND (365) 59 92
ASC (366)
END (367) 65 66 67 68
FOR (368)
INT (369)
KEY (370)
NOT (371) 44 47 56 62 70 102 110
OFF (372)
SET (373) 10
TOP (374)
AS (375) 24 83
BY (376)
IF (377) 102
IN (378) 61 62
IS (379) 46 47
OF (380)
ON (381)
OR (382) 60
TO (383)
ARRAY (384) 90
CONCAT (385) 58
ILIKE (386) 57
SECOND (387) 84
MINUTE (388) 85
HOUR (389) 86
DAY (390) 87
MONTH (391) 88
YEAR (392) 89
TRUE (393) 119
FALSE (394) 120
TRANSACTION (395)
BEGIN (396)
COMMIT (397)
ROLLBACK (398)
EQUALS (399) 72
NOTEQUALS (400) 73
LESS (401)
GREATER (402)
LESSEQ (403) 76
GREATEREQ (404) 77
NOTNULL (405)
UMINUS (406)


Nonterminals, with rules where they appear

$accept (168)
    on left: 0
preparable_statement (169)
    on left: 1 2 3 4 5, on right: 0
delete_statement (170)
    on left: 6, on right: 1
truncate_statement (171)
    on left: 7, on right: 2
insert_statement (172)
    on left: 8, on right: 3
create_statement (173)
    on left: 9, on right: 4
update_statement (174)
    on left: 10, on right: 5
update_clause_commalist (175)
    on left: 11 12, on right: 10 12
update_clause (176)
    on left: 13, on right: 11 12
opt_where (177)
    on left: 14 15, on right: 10
table_ref_name_no_alias (178)
    on left: 16, on right: 10
table_name (179)
    on left: 17 18 126, on right: 6 7 8 9 16
expr_list (180)
    on left: 19 20, on right: 20 61 62 79 90
expr_alias (181)
    on left: 21, on right: 19 20
opt_alias (182)
    on left: 22 23, on right: 21
alias (183)
    on left: 24 25, on right: 22
expr (184)
    on left: 26 27 28 29 30, on right: 13 14 21 31 59 60 63 64 65 66
    68 82 83
operand (185)
    on left: 31 32 33 34 35 36 37 38 39 40, on right: 26 43 44 45 46
    47 49 50 51 52 53 54 55 56 57 58 61 62 71 72 73 74 75 76 77 91
    92
scalar_expr (186)
    on left: 41 42, on right: 33
unary_expr (187)
    on left: 43 44 45 46 47, on right: 34
binary_expr (188)
    on left: 48 49 50 51 52 53 54 55 56 57 58, on right: 35
logic_expr (189)
    on left: 59 60, on right: 28
in_expr (190)
    on left: 61 62, on right: 30
case_list (191)
    on left: 63 64, on right: 64 65 66 67 68
case_expr (192)
    on left: 65 66 67 68, on right: 36
exists_expr (193)
    on left: 69 70, on right: 29
comp_expr (194)
    on left: 71 72 73 74 75 76 77, on right: 48
function_expr (195)
    on left: 78 79, on right: 37
opt_distinct (196)
    on left: 80 81, on right: 79
extract_expr (197)
    on left: 82, on right: 38
cast_expr (198)
    on left: 83, on right: 39
datetime_field (199)
    on left: 84 85 86 87 88 89, on right: 82
array_expr (200)
    on left: 90, on right: 40
array_index (201)
    on left: 91, on right: 32
between_expr (202)
    on left: 92, on right: 27
column_name (203)
    on left: 93 94 95 96, on right: 41
literal (204)
    on left: 97 98 99 100 101, on right: 42 116 117
opt_not_exists (205)
    on left: 102 103, on right: 9
column_def_commalist (206)
    on left: 104 105, on right: 9 105
column_def (207)
    on left: 106, on right: 104 105
column_type (208)
    on left: 107 108, on right: 83 106
opt_column_nullable (209)
    on left: 109 110 111, on right: 106
opt_column_list (210)
    on left: 112 113, on right: 8
ident_commalist (211)
    on left: 114 115, on right: 112 115
literal_list (212)
    on left: 116 117, on right: 8 117
string_literal (213)
    on left: 118, on right: 97
bool_literal (214)
    on left: 119 120, on right: 98
num_literal (215)
    on left: 121 122, on right: 99
int_literal (216)
    on left: 123, on right: 91 122
null_literal (217)
    on left: 124, on right: 100
param_expr (218)
    on left: 125, on right: 101


State 0

    0 $accept: . preparable_statement $end

    TRUNCATE  shift, and go to state 1
    CREATE    shift, and go to state 2
    DELETE    shift, and go to state 3
    INSERT    shift, and go to state 4
    UPDATE    shift, and go to state 5

    preparable_statement  转到状态 6
    delete_statement      转到状态 7
    truncate_statement    转到状态 8
    insert_statement      转到状态 9
    create_statement      转到状态 10
    update_statement      转到状态 11


State 1

    7 truncate_statement: TRUNCATE . table_name

    IDENTIFIER  shift, and go to state 12

    table_name  转到状态 13


State 2

    9 create_statement: CREATE . TABLE opt_not_exists table_name '(' column_def_commalist ')'

    TABLE  shift, and go to state 14


State 3

    6 delete_statement: DELETE . FROM table_name

    FROM  shift, and go to state 15


State 4

    8 insert_statement: INSERT . INTO table_name opt_column_list VALUES '(' literal_list ')'

    INTO  shift, and go to state 16


State 5

   10 update_statement: UPDATE . table_ref_name_no_alias SET update_clause_commalist opt_where

    IDENTIFIER  shift, and go to state 12

    table_ref_name_no_alias  转到状态 17
    table_name               转到状态 18


State 6

    0 $accept: preparable_statement . $end

    $end  shift, and go to state 19


State 7

    1 preparable_statement: delete_statement .

    $default  reduce using rule 1 (preparable_statement)


State 8

    2 preparable_statement: truncate_statement .

    $default  reduce using rule 2 (preparable_statement)


State 9

    3 preparable_statement: insert_statement .

    $default  reduce using rule 3 (preparable_statement)


State 10

    4 preparable_statement: create_statement .

    $default  reduce using rule 4 (preparable_statement)


State 11

    5 preparable_statement: update_statement .

    $default  reduce using rule 5 (preparable_statement)


State 12

   17 table_name: IDENTIFIER .
   18           | IDENTIFIER . '.' IDENTIFIER
  126           | IDENTIFIER .

    '.'  shift, and go to state 20

    $end      reduce using rule 17 (table_name)
    $end      [reduce using rule 126 (table_name)]
    VALUES    reduce using rule 17 (table_name)
    VALUES    [reduce using rule 126 (table_name)]
    SET       reduce using rule 17 (table_name)
    SET       [reduce using rule 126 (table_name)]
    '('       reduce using rule 17 (table_name)
    '('       [reduce using rule 126 (table_name)]
    $default  reduce using rule 17 (table_name)


State 13

    7 truncate_statement: TRUNCATE table_name .

    $default  reduce using rule 7 (truncate_statement)


State 14

    9 create_statement: CREATE TABLE . opt_not_exists table_name '(' column_def_commalist ')'

    IF  shift, and go to state 21

    $default  reduce using rule 103 (opt_not_exists)

    opt_not_exists  转到状态 22


State 15

    6 delete_statement: DELETE FROM . table_name

    IDENTIFIER  shift, and go to state 12

    table_name  转到状态 23


State 16

    8 insert_statement: INSERT INTO . table_name opt_column_list VALUES '(' literal_list ')'

    IDENTIFIER  shift, and go to state 12

    table_name  转到状态 24


State 17

   10 update_statement: UPDATE table_ref_name_no_alias . SET update_clause_commalist opt_where

    SET  shift, and go to state 25


State 18

   16 table_ref_name_no_alias: table_name .

    $default  reduce using rule 16 (table_ref_name_no_alias)


State 19

    0 $accept: preparable_statement $end .

    $default  接受


State 20

   18 table_name: IDENTIFIER '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 26


State 21

  102 opt_not_exists: IF . NOT EXISTS

    NOT  shift, and go to state 27


State 22

    9 create_statement: CREATE TABLE opt_not_exists . table_name '(' column_def_commalist ')'

    IDENTIFIER  shift, and go to state 12

    table_name  转到状态 28


State 23

    6 delete_statement: DELETE FROM table_name .

    $default  reduce using rule 6 (delete_statement)


State 24

    8 insert_statement: INSERT INTO table_name . opt_column_list VALUES '(' literal_list ')'

    '('  shift, and go to state 29

    $default  reduce using rule 113 (opt_column_list)

    opt_column_list  转到状态 30


State 25

   10 update_statement: UPDATE table_ref_name_no_alias SET . update_clause_commalist opt_where

    IDENTIFIER  shift, and go to state 31

    update_clause_commalist  转到状态 32
    update_clause            转到状态 33


State 26

   18 table_name: IDENTIFIER '.' IDENTIFIER .

    $default  reduce using rule 18 (table_name)


State 27

  102 opt_not_exists: IF NOT . EXISTS

    EXISTS  shift, and go to state 34


State 28

    9 create_statement: CREATE TABLE opt_not_exists table_name . '(' column_def_commalist ')'

    '('  shift, and go to state 35


State 29

  112 opt_column_list: '(' . ident_commalist ')'

    IDENTIFIER  shift, and go to state 36

    ident_commalist  转到状态 37


State 30

    8 insert_statement: INSERT INTO table_name opt_column_list . VALUES '(' literal_list ')'

    VALUES  shift, and go to state 38


State 31

   13 update_clause: IDENTIFIER . '=' expr

    '='  shift, and go to state 39


State 32

   10 update_statement: UPDATE table_ref_name_no_alias SET update_clause_commalist . opt_where
   12 update_clause_commalist: update_clause_commalist . ',' update_clause

    WHERE  shift, and go to state 40
    ','    shift, and go to state 41

    $default  reduce using rule 15 (opt_where)

    opt_where  转到状态 42


State 33

   11 update_clause_commalist: update_clause .

    $default  reduce using rule 11 (update_clause_commalist)


State 34

  102 opt_not_exists: IF NOT EXISTS .

    $default  reduce using rule 102 (opt_not_exists)


State 35

    9 create_statement: CREATE TABLE opt_not_exists table_name '(' . column_def_commalist ')'

    IDENTIFIER  shift, and go to state 43

    column_def_commalist  转到状态 44
    column_def            转到状态 45


State 36

  114 ident_commalist: IDENTIFIER .

    $default  reduce using rule 114 (ident_commalist)


State 37

  112 opt_column_list: '(' ident_commalist . ')'
  115 ident_commalist: ident_commalist . ',' IDENTIFIER

    ')'  shift, and go to state 46
    ','  shift, and go to state 47


State 38

    8 insert_statement: INSERT INTO table_name opt_column_list VALUES . '(' literal_list ')'

    '('  shift, and go to state 48


State 39

   13 update_clause: IDENTIFIER '=' . expr

    IDENTIFIER  shift, and go to state 49
    STRING      shift, and go to state 50
    FLOATVAL    shift, and go to state 51
    INTVAL      shift, and go to state 52
    EXISTS      shift, and go to state 53
    EXTRACT     shift, and go to state 54
    CAST        shift, and go to state 55
    CASE        shift, and go to state 56
    NULL        shift, and go to state 57
    NOT         shift, and go to state 58
    ARRAY       shift, and go to state 59
    TRUE        shift, and go to state 60
    FALSE       shift, and go to state 61
    '-'         shift, and go to state 62
    '*'         shift, and go to state 63
    '('         shift, and go to state 64
    '?'         shift, and go to state 65

    expr            转到状态 66
    operand         转到状态 67
    scalar_expr     转到状态 68
    unary_expr      转到状态 69
    binary_expr     转到状态 70
    logic_expr      转到状态 71
    in_expr         转到状态 72
    case_expr       转到状态 73
    exists_expr     转到状态 74
    comp_expr       转到状态 75
    function_expr   转到状态 76
    extract_expr    转到状态 77
    cast_expr       转到状态 78
    array_expr      转到状态 79
    array_index     转到状态 80
    between_expr    转到状态 81
    column_name     转到状态 82
    literal         转到状态 83
    string_literal  转到状态 84
    bool_literal    转到状态 85
    num_literal     转到状态 86
    int_literal     转到状态 87
    null_literal    转到状态 88
    param_expr      转到状态 89


State 40

   14 opt_where: WHERE . expr
